[package]
name = "custom-syscall"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { path = "/home/kavyam/Desktop/solanaLearning/cohort/solana-sdk/program", version = "2.3.0"}
solana-sysvar-id ={ path = "/home/kavyam/Desktop/solanaLearning/cohort/solana-sdk/sysvar-id", version = "2.2.1"}
tokio = "1.47.0"


[dev-dependencies]
mollusk-svm = "0.4.1"
solana-sdk = "2.3.1"
solana-client = "2.3.5"

[lib]
crate-type = ["cdylib", "lib"]
